Testing github fix to config

--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,3 +1,6 @@
 title: Henrique Boldrin
 description: My personal portfolio and projects
 markdown: kramdown
+
+baseurl: /
+url: https://henrique-fb.github.io
