--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -2,5 +2,5 @@ title: Henrique Boldrin
 description: My personal portfolio and projects
 markdown: kramdown
 
-baseurl: /
+baseurl: /docs
 url: https://henrique-fb.github.io
