adding stuff, migrating to henrique-fb

--- a/_config.yaml
+++ b/_config.yaml
@@ -2,5 +2,5 @@ title: Henrique Boldrin
 description: My personal portfolio and projects
 markdown: kramdown
 
-baseurl: /self-stuff
+baseurl: /
 url: https://henrique-fb.github.io
