--- a/_config.yaml
+++ b/_config.yaml
@@ -2,5 +2,5 @@ title: Henrique Boldrin
 description: My personal portfolio and projects
 markdown: kramdown
 
-baseurl: /
+baseurl: 
 url: https://henrique-fb.github.io
