--- a/_config.yaml
+++ b/_config.yaml
@@ -4,3 +4,8 @@ markdown: kramdown
 
 baseurl: 
 url: https://henrique-fb.github.io
+
+
+reading_time:
+  minute_singular: "min"  # default: minute
+  minute_plural: "min"    # default: minutes
